# cortex

./: .beads  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .lavra  .lefthook-local.yml  .mcp.json  .mise.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  config.toml  deny.toml  docker-compose.prod.yml  docker-compose.yml  gemini-extension.json  install.ps1  install.sh  lefthook.yml  manifest  release-please-config.json  server.json
.cargo/: audit.toml  config.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: auto-tag.yml  check-no-mcp-drift.yml  ci.yml  codex-plugin-scanner.yml  docker-publish.yml  lab-auth-bump.yml  openwiki-update.yml  publish-crates.yml  release-please.yml  release.yml  sync-marketplace-no-mcp.yml
.review/: review-threads-final.json
config/: Dockerfile  mcporter.json
config/systemd/: cortex-auto-deploy.service  cortex-auto-deploy.timer  cortex-backup.service  cortex-backup.timer  cortex-sessions-watch-doctor.service  cortex-sessions-watch-doctor.timer
deploy/: README.md
deploy/apparmor/: usr.sbin.rsyslogd.cortex
deploy/otel/: claude-code-settings.example.json  codex-config.example.toml
deploy/rsyslog/: 10-imjournal.conf  30-swag.conf  35-authelia.conf  36-adguard.conf  40-ai-transcripts.conf
docs/: CHECKLIST.md  CLI.md  CONFIG.md  GUARDRAILS.md  HIVE_MIGRATION.md  HIVE_REBRAND.md  INVENTORY.md  OAUTH.md  README.md  RELEASE.md  RUST.md  SECURITY.md  SETUP.md  api.md  architecture.md  cli-performance-report.md  expansion.md  rollout.md
docs/adr/: 001-sqlite-single-writer.md
docs/contracts/: agent-protocol.md  cli-surface.md  config-schema.md  credentials.md  current-schema.sql  data-layout.md  db-additions.sql  forwarder-dropins.md  heartbeat-telemetry.md  http-endpoints.md  incident-card.md  investigation-graph.md  log-filter-surface.md  log-row-shape.md  mcp-actions-current.md  mcp-actions.md  metadata-json-shape.md  notification-rules.schema.json  parser-trait.rs  probe-trait.rs  retention-policy.md  runtime-lifecycle.md  severity-mappings.md  source-kinds.md
docs/design/: ws-agent-channel.md
docs/internal/: rmcp-auth-spike.md
docs/mcp/: AUTH.md  CICD.md  CLAUDE.md  CONNECT.md  CORRELATION.md  DEPLOY.md  DEV.md  ELICITATION.md  ENV.md  HEADLESS_AGENT_EVAL.md  LOGS.md  MCPORTER.md  MCPUI.md  PATTERNS.md  PRE-COMMIT.md  PROMPTS.md  PUBLISH.md  RESOURCES.md  SCHEMA.md  TESTS.md  TOOLS.md  TRANSPORT.md  WEBMCP.md
docs/plans/: 2026-03-29-unifi-cef-hostname-fix.md  2026-05-04-rmcp-stdio-support-follow-up.md  2026-05-04-rmcp-streamable-http-refactor.md  2026-05-11-mnemo-feature-port.md  2026-05-12-compose-lifecycle-cli.md
docs/plugin/: AGENTS.md  CHANNELS.md  CLAUDE.md  COMMANDS.md  CONFIG.md  HOOKS.md  MARKETPLACES.md  OUTPUT-STYLES.md  PLUGINS.md  SCHEDULES.md  SKILLS.md
docs/repo/: CLAUDE.md  MEMORY.md  RECIPES.md  REPO.md  RULES.md  SCRIPTS.md
docs/reports/: homelab-analysis-2026-05-07.md
docs/reviews/: 2026-05-18-full-review-issues.md  ingestion-full-review.md
docs/runbooks/: deploy.md
docs/sessions/: 2026-03-31-feat-docker-uid-tcp-limit-sqlite-retry.md  2026-04-03-mcp-test-code-review-simplify-v2.md  2026-04-03-mcp-test-code-review-simplify.md  2026-04-04-cleanup-chunk-size-bound.md  2026-04-04-pr-review-and-simplification.md  2026-05-04-branch-cleanup-and-0.3.5-stale-files.md  2026-05-04-claude-md-audit-and-lfs-setup-v2.md  2026-05-04-claude-md-audit-and-lfs-setup.md  2026-05-04-module-split-quick-push.md  2026-05-04-rust-module-sidecars-and-loc-split.md  2026-05-04-syslog-forwarding-and-ingest-summary.md  2026-05-04-test-sidecars-and-db-size.md  2026-05-05-action-tool-refactor-and-stdio-config.md  2026-05-05-app-cli-test-sidecars-quick-push.md  2026-05-05-docker-socket-proxy-ingest.md  2026-05-05-rmcp-streamable-http-merge.md  2026-05-05-syslog-service-module-refactor-merge.md  2026-05-06-axon-plugin-mcp-http-transport.md  2026-05-06-docker-log-stream-keepalive-fix.md  2026-05-06-dockerfile-move-and-readme-audit.md  2026-05-06-mcp-stdio-config-push.md  2026-05-06-plugin-userconfig-and-deployment-hook.md  2026-05-06-remove-entrypoint-sh.md  (+102 more)
mcpb/: manifest.json
openwiki/: .last-update.json  ai-incidents.md  architecture.md  development.md  exposure-surfaces.md  inventory-graph.md  log-intelligence.md  operations.md  quickstart.md
plugins/: .mcp.json
release/: components.toml
scripts/: auto-deploy.sh  backup.sh  build-mcpb.sh  bump-version.sh  cargo-rustc-wrapper  check-agent-memory-symlinks.sh  check-plugin-manifest-versions.sh  check-public-identity.sh  check-runtime-current.sh  check-rust-module-size.sh  check-version-sync.sh  generate-aurora-logo-pack.py  install.sh  live-cli-sweep-helpers.sh  live-cli-sweep.sh  plugin-setup.sh  prompt-headless-eval.sh  reset-db.sh  rust-module-size.allow  setup-worktree.sh  smoke-ai-mcp.sh  smoke-ai.sh  smoke-test-http.sh  smoke-test.sh  test-cargo-rustc-wrapper.sh  test-check-runtime-current.sh  test-live-cli-sweep-helpers.sh  validate-canonical-plex-graph.sh  validate-marketplace.sh  verify-compose-upgrade.sh  with_timeout.sh
src/: agent.rs  agent_command_ingest.rs  agent_command_ingest_tests.rs  agent_deploy.rs  agent_deploy_tests.rs  agent_tests.rs  ai_project.rs  ai_transcript_ingest.rs  ai_transcript_ingest_tests.rs  ai_watch.rs  ai_watch_tests.rs  api.rs  api_tests.rs  app.rs  assessment.rs  assessment_tests.rs  auth.rs  cli.rs  cli_tests.rs  color_policy.rs  color_policy_tests.rs  command_log.rs  command_log_tests.rs  compose.rs  compose_tests.rs  config.rs  config_tests.rs  db.rs  deploy.rs  deploy_tests.rs  docs_tests.rs  doctor.rs  doctor_tests.rs  file_tail.rs  filetail.rs  heartbeat.rs  heartbeat_agent.rs  heartbeat_agent_tests.rs  heartbeat_tests.rs  hook_assessment.rs  (+42 more)
src/app/: mod.rs  (+33 more)
tests/: TEST_COVERAGE.md  auth_modes.rs  ci_changed_paths.rs  cli_help.rs  enrich_pipeline.rs  oauth_flow.rs  rmcp_compat.rs  spike_rmcp_extensions.rs  stdio_mcp.rs  test_live.sh  workflow_shapes.rs
xtask/: Cargo.toml
xtask/src/: main.rs  pre_push.rs  pre_push_tests.rs  version.rs  version_tests.rs
(+727 files in other folders)
