[package]
name = "cortex"
version = "1.8.0"
edition = "2021"
rust-version = "1.86"
description = "Homelab intelligence platform — syslog/OTLP/Docker log aggregation, fleet awareness, and AI agent coordination over MCP, CLI, and HTTP"
autobins = false

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP / MCP transport
axum = "0.8"
rmcp = { version = "1.6.0", default-features = false, features = [
  "server",
  "macros",
  "transport-streamable-http-server",
  "transport-io",
] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }

# SQLite
rusqlite = { version = "0.39", features = ["bundled", "vtab", "backup"] }
parking_lot = "0.12"
r2d2 = "0.8"
r2d2_sqlite = "0.33"
scheduled-thread-pool = "0.2"

# Syslog parsing
syslog_loose = "0.21"

# Docker Engine API client for optional docker-socket-proxy ingestion
bollard = { version = "0.19", default-features = false, features = [
  "http",
  "chrono",
] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Query-string serializer/deserializer that handles `Vec<String>` from repeated
# `?terms[]=a&terms[]=b` params (and `terms=a&terms=b`), unlike the default
# `serde_urlencoded` axum 0.8 wires into `Query<T>`. Used by the axum extractor
# on `GET /api/ai/abuse` so the wire shape matches `AbuseSearchRequest`
# directly (bead 0p8r.15). The reqwest client also uses it to serialize the
# same request via `Url::query_pairs_mut` so both ends share the type.
serde_qs = { version = "1.0", features = ["axum"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"
toml_edit = "0.22"

# OAuth + JWT (shared with lab via parameterizable lab-auth crate)
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"

# Errors
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI output
comfy-table = "7"
supports-hyperlinks = "3"

# Utils
anyhow = "1"
libc = "0.2"
lru = "0.16"
rustix = { version = "0.38", features = ["fs"] }
tempfile = "3"
regex = "1"
sha2 = "0.10"
getrandom = "0.3"

futures-util = "0.3"

# HTTP client for Apprise notifications and CLI REST routing (bead 0p8r.5).
# NOTE: default-features=false omits gzip/brotli/deflate decompression — fine
# for loopback `/api/*` calls. If the CLI ever points at a reverse proxy that
# gzips responses, parsing will silently break; re-enable the relevant feature.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI HTTP client: surfaces field path + preview when responses don't match
# Response struct shape (bead 0p8r.5).
serde_path_to_error = "0.1"

# OTLP HTTP receiver — message types only, no gRPC transport
opentelemetry-proto = { version = "0.31", default-features = false, features = [
  "gen-tonic-messages",
  "logs",
] }
prost = "0.14"
notify = "8.2.0"

[features]
test-support = []

[dev-dependencies]
cortex = { path = ".", features = ["test-support"] }
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
rmcp = { version = "1.6.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
# Mock HTTP server for CLI HTTP client tests (bead 0p8r.5).
wiremock = "0.6"
tracing-test = "0.2"
