[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

[dev-dependencies]
tempfile = "3"
