[package]
name = "xtask"
version = "3.11.0"
edition = "2024"
rust-version = "1.86"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
# preserve_order: without it serde_json::Map is a BTreeMap, so round-tripping a
# file through replace_json_version reorders every key alphabetically — a huge,
# semantically-pointless diff on server.json / mcpb/manifest.json each bump.
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3"
